@@ -9,3 +9,6 @@ Release 0.10:
 	and to create objects in the current zone by default (@new_port,
 	@new_room).
 	* New @list_mob command to list mobiles by number
+	* @stat command now works on mobiles
+	* UNQ DTD error handling now can accept a filename
+	
